--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#191714</color>
+    <color name="colorPrimaryDark">#191414</color>
+    <color name="colorAccent">#57B560</color>
+    <color name="colorAccentPressed">#1DB954</color>
+    <color name="colorLoginPressed">#e1e0e0</color>
+
+    <color name="colorGrayLight">#444444</color>
+    <color name="colorGrayDark">#121212</color>
+
+    <color name="colorTopHeaderBar">#191919</color>
+    <color name="colorBottomNavBar">#282828</color>
+    <color name="colorNavIcon">#ABABAB</color>
+
+    <color name="colorWhite">#ffffff</color>
 </resources>
