--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#191714</color>
     <color name="colorPrimaryDark">#191414</color>
-    <color name="colorAccent">#57B560</color>
-    <color name="colorAccentPressed">#1DB954</color>
+    <color name="colorAccent">#33bebd</color>
+    <color name="colorAccentPressed">#39d4d2</color>
     <color name="colorLoginPressed">#e1e0e0</color>
 
     <color name="colorGrayLight">#444444</color>
