Parsed in App, Detail screen complete

--- a/app/src/main/res/layout/destination_item.xml
+++ b/app/src/main/res/layout/destination_item.xml
@@ -28,23 +28,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="20dp"
         android:text="Station Four"
         android:textColor="#FFF"
         android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:text="Atlanta"
-        android:textColor="#FFF"/>
+
+
 
 
 </RelativeLayout>
