--- a/app/src/main/res/layout/content_location_details.xml
+++ b/app/src/main/res/layout/content_location_details.xml
@@ -71,22 +71,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/add_donation_button" />
-    <!--<TextView
-        android:id="@+id/locationCityStateZip"
-        android:layout_below="@+id/locationAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="@string/app_name" />
 
     <TextView
-        android:id="@+id/locationLatLong"
-        android:layout_below="@+id/locationCityStateZip"
+        android:id="@+id/donationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="@string/app_name" />-->
+        android:layout_marginBottom="175dp"
+        android:text="TextView" />
 
 </RelativeLayout>
