--- a/app/src/main/res/layout/fragment_location_details.xml
+++ b/app/src/main/res/layout/fragment_location_details.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".LocationDetails">
+    tools:context=".Fragments.LocationDetails">
 
 
     <TextView
-        android:id="@+id/flocationName"
+        android:id="@+id/locationName"
         android:layout_width="227dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -20,16 +20,16 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/flocationType"
+        android:id="@+id/locationType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/flocationName"
+        android:layout_below="@+id/locationName"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/app_name" />
 
     <TextView
-        android:id="@+id/fmessage"
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -37,26 +37,26 @@
         android:text="@string/app_name" />
 
     <TextView
-        android:id="@+id/flocationAddress"
+        android:id="@+id/locationAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/flocationCityStateZip"
+        android:layout_above="@+id/locationCityStateZip"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/app_name" />
 
     <TextView
-        android:id="@+id/flocationCityStateZip"
+        android:id="@+id/locationCityStateZip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/flocationLatLong"
+        android:layout_above="@+id/locationLatLong"
         android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/app_name" />
 
     <TextView
-        android:id="@+id/flocationLatLong"
+        android:id="@+id/locationLatLong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
