--- a/app/src/main/res/layout/fragment_donations.xml
+++ b/app/src/main/res/layout/fragment_donations.xml
@@ -7,23 +7,22 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Fragments.DonationsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ListView
+        android:id="@+id/donations"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/addDonation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="invisible"
-        android:text="@string/add_donation_button" />
-
-    <TextView
-        android:id="@+id/donations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/addDonation"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
-        android:text="TextView" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="64dp"
+        app:srcCompat="@android:drawable/ic_menu_add" />
 
 </RelativeLayout>
