Added back button, needs to be debugged

--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -39,20 +39,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-                <AutoCompleteTextView
-                    android:id="@+id/time_stamp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="time stamp"
-                    android:inputType="textPersonName"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -92,7 +79,7 @@
                     android:id="@+id/value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="item value"
+                    android:hint="item value ($)"
                     android:inputType="number" />
 
             </android.support.design.widget.TextInputLayout>
