--- a/app/src/main/res/layout/activity_donation_view.xml
+++ b/app/src/main/res/layout/activity_donation_view.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".DonationViewActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_weight="1"
+        android:background="?attr/colorPrimary"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:popupTheme="@style/AppTheme.PopupOverlay">
+
+    </android.support.v7.widget.Toolbar>
     <TextView
         android:id="@+id/donation_name"
         android:layout_width="wrap_content"
