--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -75,15 +75,27 @@
                 android:layout_height="60px"
                 android:entries="@array/itemtypes_array"
                 android:prompt="@string/item_type" />
-
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:id="@+id/action_buttons"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            >
             <Button
                 android:id="@+id/create_donation_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_create_donation"
-                android:textStyle="bold" />
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="@string/action_create_donation" />
+
+            <Button
+                android:id="@+id/cancel_button"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="@string/action_cancel" />
+        </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
