--- a/app/src/main/res/layout/content_all_donations.xml
+++ b/app/src/main/res/layout/content_all_donations.xml
@@ -30,16 +30,10 @@
     <ListView
         android:id="@+id/allDonations"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="fill_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/searchBar"
         android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:id="@+id/noResultsFoundView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/empty_list_message"
-        android:visibility="gone" />
 
 </RelativeLayout>
