--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,5 +30,14 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/common_google_signin_btn_text_light_normal_background" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/mapFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="80dp"
+        app:srcCompat="@drawable/googleg_disabled_color_18" />
+
 
 </android.support.design.widget.CoordinatorLayout>
